Provide api for fetching global list of OUs in the system (#132)
